[metadata]
name = viggy-utilities
version = 1
author = Vignesh M Pai
author_email = vigneshpai2003@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vigneshpai2003/viggy-utilities
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src